Done with templates,styles and Functionality

--- a/Project/TicketBookingSystem/templates/app/booking-success.html
+++ b/Project/TicketBookingSystem/templates/app/booking-success.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-left">
-                <a href="index.html" class="logo">
+                <a href="{% url 'index' %}" class="logo">
                     <span class="logo-icon">🎬</span>
                     <span class="logo-text">BookMyShow</span>
                 </a>
